--- a/register.html
+++ b/register.html
@@ -10,8 +10,6 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/tis_main.css">
 
-  <link rel="stylesheet" href="css/register.css">
-
   <link rel="stylesheet" href="font/fonts.css">
 </head>
 
@@ -20,6 +18,7 @@
    <div class="filter"></div>
  </div>
  <div class="card">
+   <a class="close"></a>
    <form class="form">
      <h2 class="title">Registration</h2>
      <input type="text" class="name" placeholder="Name">
