--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/tis_main.css">
+
+  <link rel="stylesheet" href="font/fonts.css">
 </head>
 <body>
 
@@ -17,10 +19,15 @@
     </div>
     <div class="sub_header">
       <ul class="navigation">
-
+        <li>Page 1</li>
+        <li>Page 2</li>
+        <li class="nav_title">YourSite</li>
+        <li>Page 3</li>
+        <li>Page 4</li>
       </ul>
     </div>
-  </header>
+    <img class="profile_icon" src="img/4092564-about-mobile-ui-profile-ui-user-website_114033 (1) 1.svg">
+   </header>
 
 </body>
 </html>
