--- a/profile.html
+++ b/profile.html
@@ -29,5 +29,19 @@
     <img class="profile_icon" src="img/4092564-about-mobile-ui-profile-ui-user-website_114033 (1) 1.svg">
    </header>
 
+   <section>
+    <div class="profile">
+      <p class="name_surname">Name Surname</p>
+      <img class="profile_img" src="img/Vector.svg">
+      <p class="info">E-mail: a;skdjajkdhfkds@asdg.com</p>
+      <p class="info">Birth date: 03.05.2000</p>
+     </div>
+     <div class="divider"></div>
+     <div class="essay">
+      <p class="essay_title">About me</p>
+      <p class="essay_text">sdgjlksgkjdfgkjldglkhdflkjghlekjragliuerhgiuoehragiuhgsuoghljg;liehuoerfk;ldkdjflinhjgf'pdfbgdksl;adlfkgjdfl;gjk;sfgkj;gkjs;lfgkhgfld;sgknfld;gknkglf;d'sa;flkbnkl;'dfkbn,gklf;nlgf;nkgldf;sp'kn</p>
+     </div>
+   </section>
+
 </body>
 </html>
